# caprica

./: .gitignore  Caprica4.py  README.md  caprica3-presented.py  pyproject.toml  working.py
data/: edgwired.example.txt  obrigado.example.txt
legacy/: caprica_2.py  caprica_3_presented.py  caprica_4.py  caprica_5.py  caprica_edgwired.py  caprica_freq.py  chunking.py  log_chunker.py  working.py
src/caprica/: __init__.py  chunker.py  frequency.py  main.py  parser.py
