[project]
name = "caprica"
version = "0.1.0"
description = "A means of conversation with or between past selves."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Copyright (c) 2010 Eric Mika and Michael Edgcumbe. All rights reserved." }
authors = [{ name = "Eric Mika" }, { name = "Michael Edgcumbe" }]
dependencies = ["nltk>=3.8"]

[project.optional-dependencies]
dev = ["ruff>=0.4"]

[project.scripts]
caprica = "caprica.main:main"
caprica-parse-aim = "caprica.parser:main"
caprica-chunk = "caprica.chunker:main"
caprica-freq = "caprica.frequency:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caprica"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM115", # context manager for open (code uses try/finally which is fine)
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
